--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,13 +5,16 @@
     padding: 0;
     font-family: 'Quicksand', sans-serif;
 }
+.btn{
+    background-color: #FF4A4A;
+    color: #fff;
+}
 
-/* The hero image */
+/* hero session*/
 .hero .img img{
     width: 100%;
 }
-
-.row {
+.hero .row {
 	display: flex;
 	flex: 0 1 auto;
 	flex-direction: row;
@@ -20,8 +23,67 @@
 [class*='col-'] {
 	flex: 1;
 }
+.hero-text div .welcome-hero{
+    font-size: 30px;
+}
+.hero-text div .title-hero{
+    font-size: 40px;
+    line-height: 40px;
+}
+.hero-text div .text-hero{
+    font-size: 18px;
+}
+.hero-text div .btn-text{
+    font-size: 18px;
+}
+.hero-text .explore a{
+    font-size: 18px;
+}
 
-@media (max-width: 544px) { 
+
+/*Quality session*/
+.quality{
+    margin-top: 100px;
+}
+.title-quality{
+    font-size:50px; 
+    line-height:52px;
+}
+.text-quality{
+    font-size: 18px;
+}
+
+
+/* trending session */
+.trending{
+    margin-top: 80px;
+}
+.trending .row .card-deck .card{
+    background-color: #F4f4f4;
+}
+.trending .trending-title{
+    font-size:40px;
+    margin-right: 30px;
+}
+
+/* discount session */
+.discount{
+    margin-top: 100px; 
+}
+.discount .title-discount{
+    font-size: 26px; 
+}
+.discount .text-discount{
+    font-size: 14px; 
+}
+.discount p{
+    line-height: 10px; 
+}
+
+
+
+/*small devices*/
+@media (max-width: 576px) { 
     
     .reverse-column {
         flex-direction: row-reverse;
@@ -38,8 +100,53 @@
 	}
     .hero-text{
         margin-top: 100px;
+        text-align: center;
     }
     .hero .img img{
         margin-top: 20px;
+        height: 100%;
+    }
+    .elipse{
+        display: none;
+    }
+}
+
+@media (max-width: 1024px) { 
+    .hero-text div .welcome-hero{
+        font-size: 20px;
+        line-height: 22px;
+    }
+    .hero-text div .title-hero{
+        font-size: 28px;
+        line-height: 30px;
+    }   
+    .hero-text div .text-hero{
+        font-size: 13px;
+    }
+    .hero-text div .text-explore{
+        font-size: 13px;
+    }
+    .hero-text .explore .btn{
+        font-size: 13px;
+    }
+    .hero-text .explore a{
+        font-size: 13px;
+    }
+    .hero-text .explore i{
+        font-size: 10px;
+    }
+    .elipse{
+        display: none;
+    }
+    .title-quality{
+        font-size:30px; 
+        line-height: 35px;
+    }
+    .text-quality{
+        font-size : 13px; 
+    }
+    
+    .trending .row .trending-title{
+        font-size: 28px;
     }
 }
