--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,6 +10,29 @@
     color: #fff;
 }
 
+/* navbar */
+.navbar-denmarket ul li{
+    margin: 10px;
+}
+.navbar-denmarket ul .underline-bar{
+    height: 3px;
+    background-color: transparent;
+    width: 0%;
+    transition: width 0.25s, background-color 0.5s;
+    margin: 0 auto;
+}
+.navbar-denmarket ul .active .underline-bar{
+    background-color: #FF4A4A;
+    width: 100%;
+}
+.navbar-denmarket ul li:hover .underline-bar{
+    background-color: #FF4A4A;
+    width: 100%;
+}
+/* end navbar */
+
+
+/* HOME CSS START */
 /* hero session*/
 .hero .img img{
     width: 100%;
@@ -23,6 +46,7 @@
 [class*='col-'] {
 	flex: 1;
 }
+
 .hero-text div .welcome-hero{
     font-size: 30px;
 }
@@ -198,8 +222,187 @@ color: #ffffff;
 border: 1px solid #FF4A4A;
 background: #FF4A4A;
 }
+/* HOME CSS END */
 
 
+/* PRODUCT CSS START*/
+.product{
+    margin-top: 100px;
+}
+
+.hero-text div .title-hero2{
+    font-size: 60px;
+    line-height: 55px;
+}
+.hero-text div .text-hero2{
+    font-size: 18px;
+}
+
+/* nav product start */
+.product ul .underline{
+    height: 3px;
+    background-color: transparent;
+    width: 0%;
+    transition: width 0.25s, background-color 0.5s;
+    margin: 0 auto;
+}
+.product ul .active .underline{
+    background-color: #FF4A4A;
+    width: 100%;
+}
+.product ul li:hover .underline{
+    background-color: #FF4A4A;
+    width: 100%;
+}
+.product ul li:hover a{
+    color: #262626;
+}
+/* nav product end */
+
+/* card product */
+.product-card {
+  position: relative;
+  width: 320px;
+  height: auto;
+  background: #fff;
+  border-radius: 20px;
+  overflow: hidden;
+  margin: 20px;
+}
+
+.product-card::before {
+  content: "";
+  position: absolute;
+  top: -50%;
+  width: 100%;
+  height: 100%;
+  background: #FF4A4A;
+  transform: skewY(345deg);
+  transition: 0.5s;
+}
+
+.product-card:hover::before {
+  top: -70%;
+  transform: skewY(390deg);
+}
+
+.product-card::after {
+  content: "SHOE";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-weight: 600;
+  font-size: 6em;
+  color: #f6f6f6;
+}
+
+.product-card .imgBox {
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  z-index: 1;
+}
+/*
+.product-card .imgBox img {
+    max-width: 100%;
+    
+    transition: .5s;
+}
+
+.product-card:hover .imgBox img {
+    max-width: 50%;
+      
+}
+*/
+.product-card .contentBox {
+  position: relative;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: 2;
+}
+
+.product-card .contentBox h3 {
+  font-size: 18px;
+  color: #262626;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.product-card .contentBox .price {
+  font-size: 24px;
+  color: #262626;
+  font-weight: 700;
+  letter-spacing: 1px;
+}
+
+.product-card .contentBox .buy {
+  position: relative;
+  top: 100px;
+  opacity: 0;
+  padding: 10px 30px;
+  margin-top: 15px;
+  color: #fff;
+  text-decoration: none;
+  background: #FF4A4A;
+  border-radius: 30px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  transition: 0.5s;
+}
+
+.product-card:hover .contentBox .buy {
+  top: 0;
+  opacity: 1;
+}
+
+.shoe {
+  height: 100%;
+  width: auto;
+}
+/* card product end */
+
+/* PRODUCT CSS END */
+
+
+/* CONTACT US START */
+.contact-us{
+    margin-top: 40px;
+}
+.contact-us .contact-title{
+    font-size:30px;
+}
+.contact-us .info-contact{
+    margin-top: 30px;
+}
+.contact-us p{
+    line-height: 13px;
+}
+.contact-us .address p{
+    line-height: 10px;
+}
+.contact-us .address-title{
+    color:#8B8BA5;
+}
+.contact-us .phone p{
+    line-height: 10px;
+}
+.contact-us .phone-title{
+    color:#8B8BA5;
+}
+.contact-us .email p{
+    line-height: 10px;
+}
+.contact-us .email-title{
+    color:#8B8BA5;
+}
+/* CONTACT US END */
 
 
 /*small devices*/
@@ -280,3 +483,145 @@ background: #FF4A4A;
         font-size: 13px;
     }
 }
+
+/* footer */
+.footer-cont{
+    margin-top: 80px;
+}
+.site-footer{
+  background-color:#fff;
+  padding:45px 0 20px;
+  font-size:15px;
+  line-height:24px;
+  color:#FF4A4A;
+}
+.site-footer hr{
+  border-top-color:#FF4A4A;
+  opacity:0.5
+}
+.site-footer hr.small{
+  margin:20px 0
+}
+.site-footer h6{
+  color:#FF4A4A;
+  font-size:16px;
+  text-transform:uppercase;
+  margin-top:5px;
+  letter-spacing:2px
+}
+.site-footer p{
+  color:#262626;
+}
+.site-footer a{
+  color:#262626;
+}
+.site-footer a:hover{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links{
+  padding-left:0;
+  list-style:none
+}
+.footer-links li{
+  display:block
+}
+.footer-links a{
+  color:#262626
+}
+.footer-links a:active,.footer-links a:focus,.footer-links a:hover{
+  color:#3366cc;
+  text-decoration:none;
+}
+.footer-links.inline li{
+  display:inline-block
+}
+.site-footer .social-icons{
+  text-align:right
+}
+.site-footer .social-icons a{
+  width:40px;
+  height:40px;
+  line-height:40px;
+  margin-left:6px;
+  margin-right:0;
+  border-radius:100%;
+  background-color:#262626
+}
+.copyright-text{
+  margin:0
+}
+@media (max-width:991px){
+  .site-footer [class^=col-]{
+    margin-bottom:30px
+  }
+}
+@media (max-width:767px){
+  .site-footer{
+    padding-bottom:0
+  }
+  .site-footer .copyright-text,.site-footer .social-icons{
+    text-align:center
+  }
+}
+.social-icons{
+  padding-left:0;
+  margin-bottom:0;
+  list-style:none
+}
+.social-icons li{
+  display:inline-block;
+  margin-bottom:4px
+}
+.social-icons li.title{
+  margin-right:15px;
+  text-transform:uppercase;
+  color:#FF4A4A;
+  font-weight:700;
+  font-size:13px
+}
+.social-icons a{
+  background-color:#FF4A4A;
+  color:#FFf;
+  font-size:16px;
+  display:inline-block;
+  line-height:44px;
+  width:44px;
+  height:44px;
+  text-align:center;
+  margin-right:8px;
+  border-radius:100%;
+  -webkit-transition:all .2s linear;
+  -o-transition:all .2s linear;
+  transition:all .2s linear
+}
+.social-icons a:active,.social-icons a:focus,.social-icons a:hover{
+  color:#fff;
+  background-color:#29aafe
+}
+.social-icons.size-sm a{
+  line-height:34px;
+  height:34px;
+  width:34px;
+  font-size:14px
+}
+.social-icons a.facebook:hover{
+  background-color:#3b5998
+}
+.social-icons a.twitter:hover{
+  background-color:#00aced
+}
+.social-icons a.instagram:hover{
+  background-color:#ea4c89
+}
+.social-icons a.whatsapp:hover{
+  background-color:#34D131
+}
+@media (max-width:767px){
+  .social-icons li.title{
+    display:block;
+    margin-right:0;
+    font-weight:600
+  }
+}
+/* footer end */
