--- a/public/css/style.css
+++ b/public/css/style.css
@@ -281,6 +281,7 @@ background: #FF4A4A;
   transition: 0.5s;
 }
 
+
 .product-card:hover::before {
   top: -70%;
   transform: skewY(390deg);
@@ -385,25 +386,41 @@ background: #FF4A4A;
     line-height: 13px;
 }
 .contact-us .address p{
-    line-height: 10px;
+    line-height: 6px;
+    font-size: 14px;
 }
 .contact-us .address-title{
     color:#8B8BA5;
 }
 .contact-us .phone p{
-    line-height: 10px;
+    line-height: 6px;
+    font-size: 14px;
 }
 .contact-us .phone-title{
     color:#8B8BA5;
 }
 .contact-us .email p{
-    line-height: 10px;
+    line-height: 6px;
+    font-size: 14px;
 }
 .contact-us .email-title{
     color:#8B8BA5;
 }
+.contact-us .form-group{
+  font-size: 12px;
+  color: #8B8BA5;
+  line-height: 8px;
+}
 /* CONTACT US END */
 
+/* ABOUT US START */
+.container {
+  position: relative;
+}
+.container .container-about {
+  margin-top: -6em;
+}
+/* ABOUT US END */
 
 /*small devices*/
 @media (max-width: 576px) { 
