menampilkan data produk di halaman user

--- a/public/css/sb-admin-2.css
+++ b/public/css/sb-admin-2.css
@@ -10055,7 +10055,7 @@ a:focus {
 }
 
 .border-left-danger {
-  border-left: 0.25rem solid #e74a3b !important;
+  border-left: 0.25rem solid #FF4A4A !important;
 }
 
 .border-bottom-danger {
